--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -30,7 +30,7 @@
     </style>
   </head>
 
-  <body>
+  <body class="min-h-screen flex flex-col bg-white text-gray-800">
     <%- include('partials/navbar') %>
 
     <!-- Main Content -->
@@ -196,12 +196,19 @@
   </div>
 </td>
                     <td data-label="Action">
-                      <button
+                      <!-- <button
                         onclick="removeItem('<%= item._id %>',this)"
                         class="text-red-500 hover:text-red-700 transition-colors duration-200"
                       >
                         <i class="fas fa-trash"></i>
-                      </button>
+                      </button> -->
+                      <button
+  onclick="removeItem('<%= item._id %>', this)"
+  class="remove-cart-item text-red-500 hover:text-red-700 transition-colors duration-200"
+  data-cart-item-id="<%= item._id %>"
+>
+  <i class="fas fa-trash"></i>
+</button>
                     </td>
                   </tr>
                   <% }); %>
@@ -351,11 +358,8 @@
       </div>
     </main>
  
-
-    <script src="/js/cart.js"></script>
-    
-
     <%- include('partials/footer') %>
+    <script src="/js/cart.js"></script>
   </body>
   
 </html>
