--- a/views/user/wishlist.ejs
+++ b/views/user/wishlist.ejs
@@ -7,6 +7,8 @@
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body class="bg-white text-gray-800">
 
@@ -88,9 +90,7 @@
     </div>
   </main>
 
-  <footer class="bg-white border-t mt-10 py-6 text-center text-sm text-gray-400">
-    © 2025 GameZone. All rights reserved.
-  </footer>
+  <%- include("partials/footer") %>
 
 <script src="/js/wishlist.js"></script>
 </body>
