--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -22,6 +22,7 @@
 </head>
 <body class="bg-white text-gray-800">
 
+  <!-- <%- include('partials/navbar', { user: user }) %> -->
   <%- include('partials/navbar') %>
 
   <% if (!user) { %>
