--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -58,20 +58,29 @@
 
         <!-- Password -->
         <div class="relative">
-          <input type="password" name="password"
+          <input type="password" id="signup-password" name="password" autocomplete="off"
             placeholder="Password (min. 8 characters)"
             class="w-full bg-zinc-800/50 border border-zinc-700 text-white rounded-lg pl-9 pr-3 py-2 text-sm
                    focus:ring-1 focus:ring-white/50 focus:border-transparent">
+                   
           <i class="fas fa-lock absolute left-3 top-2.5 text-zinc-500 text-sm"></i>
+          <button type="button" data-toggle="signup-password"
+          class="absolute right-3 top-2.5 text-zinc-500 text-sm focus:outline-none">
+          <i class="fa-regular fa-eye"></i>
+        </button>
         </div>
 
         <!-- Confirm Password -->
         <div class="relative">
-          <input type="password" name="confirm_password"  
+          <input type="password" id="signup-confirm-password" name="confirm_password"  
             placeholder="Confirm Password"
             class="w-full bg-zinc-800/50 border border-zinc-700 text-white rounded-lg pl-9 pr-3 py-2 text-sm
                    focus:ring-1 focus:ring-white/50 focus:border-transparent">
           <i class="fas fa-lock absolute left-3 top-2.5 text-zinc-500 text-sm"></i>
+          <button type="button" data-toggle="signup-confirm-password"
+          class="absolute right-3 top-2.5 text-zinc-500 text-sm focus:outline-none">
+          <i class="fa-regular fa-eye"></i>
+        </button>
         </div>
 
         <!-- Submit Button -->
@@ -105,5 +114,22 @@
       </p>
     </div>
   </div>
+  <script>
+document.querySelectorAll('button[data-toggle]').forEach(btn => {
+  btn.addEventListener('click', function() {
+    const input = document.getElementById(this.getAttribute('data-toggle'));
+    const icon = this.querySelector('i');
+    if (input.type === "password") {
+      input.type = "text";
+      icon.classList.remove('fa-eye');
+      icon.classList.add('fa-eye-slash');
+    } else {
+      input.type = "password";
+      icon.classList.remove('fa-eye-slash');
+      icon.classList.add('fa-eye');
+    }
+  });
+});
+    </script>
 </body>
 </html>
