--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -109,7 +109,7 @@
               <p class="label text-xs text-gray-500">Phone</p>
               <p class="value text-base text-gray-700"><%= user.phone %></p>
             </div>
-            <div class="referral-box w-full mt-4 bg-blue-50 rounded-lg p-3 flex flex-col items-center">
+            <!-- <div class="referral-box w-full mt-4 bg-blue-50 rounded-lg p-3 flex flex-col items-center">
               <p class="referral-code font-mono text-lg text-blue-700" id="referral-code">OXY9BA5BD</p>
               <div class="referral-icons flex gap-3 mt-2">
                 <button id="copy-btn" title="Copy"><i class="fas fa-copy"></i></button>
@@ -118,13 +118,13 @@
               <p class="referral-msg text-xs text-gray-600 mt-2" id="copy-feedback">
                 Share this code with friends and get ₹200 in your wallet when they sign up!
               </p>
-            </div>
-            <% if (messages.success && messages.success.length > 0) { %>
+            </div> -->
+            <!-- <% if (messages.success && messages.success.length > 0) { %>
               <div class="flash-message success mt-4"><%= messages.success[0] %></div>
             <% } %>
             <% if (messages.error && messages.error.length > 0) { %>
               <div class="flash-message error mt-4"><%= messages.error[0] %></div>
-            <% } %>
+            <% } %> -->
           </div>
         </div>
       </div>
